--- a/Front-End/src/app/components/quienes-somos/quienes-somos.component.css
+++ b/Front-End/src/app/components/quienes-somos/quienes-somos.component.css
@@ -101,6 +101,18 @@
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
 }
 
+.mission-card-1 {
+  margin-top: 2rem;
+  background: rgba(147, 235, 159, 0.15);
+  border-radius: 12px;
+  border-left: 4px solid var(--dark-green);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+  -webkit-border-radius:;
+  -moz-border-radius:;
+  -ms-border-radius:;
+  -o-border-radius:;
+}
+
 .fintech-card {
   background: white;
   border-radius: 12px;
