--- a/Front-End/src/app/components/quienes-somos/quienes-somos.component.html
+++ b/Front-End/src/app/components/quienes-somos/quienes-somos.component.html
@@ -84,6 +84,19 @@
               </div>
             </div>
           </div>
+
+          <div class="mission-card-1 p-4">
+            <div class="row">
+              <div class="col-md-8 mx-auto">
+                <h3 class="fw-bold text-center mb-3 display-6">
+                  Nuestra Visión
+                </h3>
+                <p class="fs-5 text-center">
+                  Para el año 2030, ser la plataforma fintech líder en inclusión y educación financiera para los pequeños comerciantes, facilitando un acceso seguro y transparente al financiamiento formal y disminuyendo la dependencia de los sistemas agiotistas. Aspiramos a consolidarnos como un referente tecnológico que impulse el desarrollo económico y el crecimiento sostenible de los emprendedores.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
