--- a/Front-End/src/app/components/orientacion/orientacion.component.css
+++ b/Front-End/src/app/components/orientacion/orientacion.component.css
@@ -36,6 +36,21 @@
     border-left: 5px solid #2e7d32;
 }
 
+.video-wrapper {
+    max-width: 300px; 
+    width: 100%;
+    padding-top: 100%;
+    position: relative;
+}
+
+.video-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+}
 .feature-cards {
     padding: 40px 0;
 }
